manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: philthegreat-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: philthegreat
  template:
    metadata:
      labels:
        app: philthegreat
    spec:
      containers:
        - name: philthegreat
          image: localhost/philthegreat:v1
          ports:
            - containerPort: 8000
