manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: philthegreat-service
spec:
  selector:
    app: philthegreat
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
  type: LoadBalancer
