manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: adjustphilthegreat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: philthegreat-service
                port:
                  number: 8080
